feat(user): add update photo by minio
